# flet-toastify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  zensical.toml
.github/workflows/: dev.yml  docs.yml  main.yml
docs/: index.md
docs/architecture/: diagrams.md  index.md
docs/assets/diagrams/manual/: component-view.mmd  toast-lifecycle.mmd
docs/javascripts/: mermaid-viewer.js
docs/reference/: api.md
docs/stylesheets/: extra.css
examples/: main.py
scripts/: check_api_reference_coverage.py  check_docstring_coverage.py  generate_class_diagram.py  render_mermaid_svg.mjs
src/flet_toastify/: __init__.py  components.py  models.py  state.py  style.py  types.py
tests/: conftest.py
tests/unit/: test_components.py  test_facade.py  test_models.py  test_package.py  test_state.py  test_style.py  test_types.py
